исправлены неправильные импорты для первых трех подзадач